# AIShippingInspectAgent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: domain.py
backend/app/schemas/: api.py
backend/app/services/: agents.py  notifications.py  ocr.py  openai_json.py  pipeline.py  queue.py  state_machine.py  vector_store.py
backend/app/workers/: redis_worker.py
backend/samples/: mock_invoice.txt  policies.json  sample_payloads.http
backend/scripts/: seed_policies.py
backend/tests/: conftest.py  test_api.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Dashboard.tsx
frontend/lib/: api.ts
