[project]
name = "ai-shipping-inspect-agent-backend"
version = "0.1.0"
description = "FastAPI backend for agentic shipping invoice inspection"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "openai>=1.40.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy[asyncio]>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
